RESOLVED FIXED207900
Value sanitization for input[type=text] should not truncate a value at a control character
https://bugs.webkit.org/show_bug.cgi?id=207900
Summary Value sanitization for input[type=text] should not truncate a value at a cont...
Carlos Alberto Lopez Perez
Reported 2020-02-18 10:52:09 PST
WebKit its truncating the value for input type text at the first control character that its non a tab. This behaviour its not defined on the spec, neither match what other browsers do (Firefox, Chrome, etc). This causes thousands of subtest failures on WPT tests encoding/legacy-mb-japanese/iso-2022-jp/iso2022jp-encode-form* <https://wpt.fyi/results/encoding/legacy-mb-japanese/iso-2022-jp> Chrome corrected this behaviour years ago. For reference see: https://codereview.chromium.org/189843008
Attachments
Patch (7.42 MB, patch)
2020-02-18 11:14 PST, Carlos Alberto Lopez Perez
no flags
Patch (7.45 MB, patch)
2020-02-19 04:27 PST, Carlos Alberto Lopez Perez
no flags
Patch (7.44 MB, patch)
2020-02-19 13:39 PST, Carlos Alberto Lopez Perez
no flags
Carlos Alberto Lopez Perez
Comment 1 2020-02-18 11:14:00 PST
Carlos Alberto Lopez Perez
Comment 2 2020-02-18 11:18:22 PST
(In reply to Carlos Alberto Lopez Perez from comment #0) > WebKit its truncating the value for input type text at the first control > character that its non a tab. > > This behaviour its not defined on the spec, neither match what other > browsers do (Firefox, Chrome, etc). > Spec: https://html.spec.whatwg.org/multipage/input.html#text-(type=text)-state-and-search-state-(type=search):value-sanitization-algorithm
Carlos Alberto Lopez Perez
Comment 3 2020-02-19 04:27:22 PST
Created attachment 391152 [details] Patch Rebaseline also imported/w3c/web-platform-tests/html/semantics/forms/the-input-element/valueMode.html with more PASS lines
Carlos Alberto Lopez Perez
Comment 4 2020-02-19 13:39:26 PST
Created attachment 391196 [details] Patch Fix wrong baseline for ios in imported/w3c/web-platform-tests/html/semantics/forms/the-input-element/valueMode.html
Carlos Alberto Lopez Perez
Comment 5 2020-02-20 10:04:20 PST
r? All EWS are green now.
Carlos Alberto Lopez Perez
Comment 6 2020-02-21 03:22:51 PST
Comment on attachment 391196 [details] Patch Clearing flags on attachment: 391196 Committed r257132: <https://trac.webkit.org/changeset/257132>
Carlos Alberto Lopez Perez
Comment 7 2020-02-21 03:22:55 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2020-02-21 03:23:21 PST
Note You need to log in before you can comment on or make changes to this bug.