Value sanitization for input[type=text] should not truncate a value at a control character https://bugs.webkit.org/show_bug.cgi?id=207900

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline the tests. Below its a summary of the number of FAIL and PASS lines changed for each test:

* web-platform-tests/encoding/legacy-mb-japanese/iso-2022-jp/iso2022jp-encode-form-csiso2022jp-expected.txt:
  FAIL from 7312 to 374
  PASS from 17 to 6955
* web-platform-tests/encoding/legacy-mb-japanese/iso-2022-jp/iso2022jp-encode-form-errors-han-expected.txt:
  FAIL from 21216 to 477
  PASS from 53 to 20792
* web-platform-tests/encoding/legacy-mb-japanese/iso-2022-jp/iso2022jp-encode-form-errors-hangul-expected.txt:
  FAIL from 11155 to 0
  PASS from 28 to 11183
* web-platform-tests/encoding/legacy-mb-japanese/iso-2022-jp/iso2022jp-encode-form-errors-misc-expected.txt:
  FAIL from 3422 to 46
  PASS from 9 to 3385
* web-platform-tests/encoding/legacy-mb-japanese/iso-2022-jp/iso2022jp-encode-form-expected.txt:
  FAIL from 7375 to 374
  PASS from 17 to 7018
* web-platform-tests/html/semantics/forms/the-input-element/valueMode-expected.txt:
  FAIL from 20 to 10
  PASS from 22 to 32

Source/WebCore:

Stop truncating value at a control character. The new behavior is compatible with Chrome and Firefox.
Inspired on Chromium patch https://codereview.chromium.org/189843008

Covered by existing tests: affected layout tests are modified to reflect the new behaviour.
This improves WPT pass-rate in around 49K new subtest passes for Japanesse encoding tests.

* html/TextFieldInputType.cpp:
(WebCore::limitLength):

LayoutTests:

Update layout tests to reflect the new behaviour.

* fast/forms/input-value-sanitization-expected.txt:
* fast/forms/input-value-sanitization.html:
* fast/forms/paste-multiline-text-input.html:
* platform/ios-wk2/imported/w3c/web-platform-tests/html/semantics/forms/the-input-element/valueMode-expected.txt:
* platform/mac-wk2/imported/w3c/web-platform-tests/html/semantics/forms/the-input-element/valueMode-expected.txt:
* platform/mac/imported/w3c/web-platform-tests/html/semantics/forms/the-input-element/valueMode-expected.txt:

Canonical link: https://commits.webkit.org/221019@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257132 268f45cc-cd09-0410-ab3c-d52691b4dbfc